--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,7 +166,7 @@
     <string name="thread_reply_nostr_publish_error">Unable to publish your note to Nostr. Please try again soon.</string>
 
     <string name="bookmarks_title">Bookmarks</string>
-    <string name="bookmarks_no_content">You don\'t have any bookmarks.</string>
+    <string name="bookmarks_no_content">Your bookmarks will appear here.</string>
 
     <string name="explore_search_nostr">Search Nostr</string>
     <string name="explore_enter_query">Enter text to search</string>
