Implement note zaps reaction screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,6 +164,8 @@
     <string name="thread_publish_button">Reply</string>
     <string name="thread_publishing_button">Replying…</string>
     <string name="thread_reply_nostr_publish_error">Unable to publish your note to Nostr. Please try again soon.</string>
+    
+    <string name="note_reactions_title">Note Zaps</string>
 
     <string name="bookmarks_title">Bookmarks</string>
     <string name="bookmarks_no_content">Your bookmarks will appear here.</string>
