Implement connect other wallet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,6 +268,10 @@
     <string name="settings_wallet_start_in_wallet_hint">Open the wallet when Primal starts</string>
     <string name="settings_wallet_save">Save</string>
 
+    <string name="settings_wallet_nwc_qr_code_scan_title">Scan QR Code</string>
+    <string name="settings_wallet_nwc_qr_code_scan_hint">Scan QR code to connect external wallet</string>
+    <string name="settings_wallet_nwc_qr_code_scan_paste">Paste from clipboard</string>
+
     <string name="settings_notifications_title">Notifications</string>
     <string name="settings_notifications_error_update_settings">Unable to update notification settings.</string>
     <string name="settings_notifications_error_fetch_settings">Unable to retrieve latest notification settings.</string>
