Implement nip05 validation on profile editor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="app_error_muting_user">Unable to mute user. Please try again.</string>
     <string name="app_error_unmuting_user">Unable to unmute user. Please try again.</string>
     <string name="app_invalid_lightning_address">Invalid lightning address. User \'%1$s\' doesn\'t exist on %2$s.</string>
+    <string name="app_invalid_nip05_address">Invalid nostr verification address.</string>
 
     <string name="welcome_sign_in_button_title">Sign In</string>
     <string name="welcome_create_account_button_title">Create Account</string>
