--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
     <string name="app_removed_from_user_feeds">Removed from your home feeds</string>
     <string name="app_error_muting_user">Unable to mute user. Please try again.</string>
     <string name="app_error_unmuting_user">Unable to unmute user. Please try again.</string>
-    <string name="app_invalid_lightning_address">Invalid lightning address. User \'%1$s\' doesn\'t exist on %2$s.</string>
+    <string name="app_invalid_lud16_address">Invalid lightning (lud16) address.</string>
+    <string name="app_invalid_lud16_address_user_not_found">Invalid lightning address. User \'%1$s\' doesn\'t exist on %2$s.</string>
     <string name="app_invalid_nip05_address">Invalid nostr verification address.</string>
 
     <string name="welcome_sign_in_button_title">Sign In</string>
