Implement long form thread api; Implement empty long form screen; Implement opening long form by searching naddr; Mark old error handlers as deprecated;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -203,6 +203,8 @@
     <string name="thread_publish_button">Reply</string>
     <string name="thread_publishing_button">Replying…</string>
     <string name="thread_reply_nostr_publish_error">Unable to publish your note to Nostr. Please try again soon.</string>
+
+    <string name="long_form_thread_invalid_naddr">Unable to load content. The address is invalid.</string>
     
     <string name="note_reactions_title">Note Zaps</string>
 
