--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -349,18 +349,21 @@
     <string name="settings_content_display_full_screen_feed_display_hint">Maximize screen real estate by hiding app header &amp; footer as you scroll down the feed.</string>
 
     <string name="settings_network_title">Network</string>
+    <string name="settings_network_relays_section">Relays</string>
+    <string name="settings_network_add_a_relay_section">Add a relay</string>
     <string name="settings_network_restore_default_relays_text_button">Restore Defaults Relays</string>
     <string name="settings_network_restore_default_relays_title">Restore Defaults</string>
     <string name="settings_network_restore_default_relays_description">Are you sure you want to restore default relays?</string>
     <string name="settings_network_delete_relay_title">Confirm Deletion</string>
     <string name="settings_network_delete_relay_description">Are you sure you want to delete relay <b>%1$s</b>?</string>
-    <string name="settings_network_relays_section">Relays</string>
-    <string name="settings_network_my_relays_section">My Relays</string>
     <string name="settings_network_caching_service_section">Caching Service</string>
-    <string name="settings_network_connect_to_relay_section">Connect to relay</string>
+    <string name="settings_network_switch_caching_service">Switch Caching Service</string>
+    <string name="settings_network_restore_default_caching_service">Restore Default Caching Service</string>
     <string name="settings_network_dialog_confirm">Confirm</string>
     <string name="settings_network_dialog_dismiss">Dismiss</string>
     <string name="settings_network_add_relay_error">Unable to add relay. Please try again in few moments.</string>
+    <string name="settings_network_enhanced_privacy_title">Enhanced Privacy</string>
+    <string name="settings_network_enhanced_privacy_description">When enabled, your IP address will be visible to the caching service, but not to relays. Your content will be published to your specified relays using the caching service as a proxy.</string>
 
     <string name="settings_feeds_title">Feeds</string>
     <string name="settings_feeds_list_title">Your Nostr feeds</string>
