Implement restore default caching service feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -351,14 +351,16 @@
     <string name="settings_network_title">Network</string>
     <string name="settings_network_relays_section">Relays</string>
     <string name="settings_network_add_a_relay_section">Add a relay</string>
-    <string name="settings_network_restore_default_relays_text_button">Restore Defaults Relays</string>
     <string name="settings_network_restore_default_relays_title">Restore Defaults</string>
     <string name="settings_network_restore_default_relays_description">Are you sure you want to restore default relays?</string>
+    <string name="settings_network_restore_default_relays_text_button">Restore Defaults Relays</string>
     <string name="settings_network_delete_relay_title">Confirm Deletion</string>
     <string name="settings_network_delete_relay_description">Are you sure you want to delete relay <b>%1$s</b>?</string>
     <string name="settings_network_caching_service_section">Caching Service</string>
     <string name="settings_network_switch_caching_service">Switch Caching Service</string>
-    <string name="settings_network_restore_default_caching_service">Restore Default Caching Service</string>
+    <string name="settings_network_restore_default_caching_service_title">Restore Default</string>
+    <string name="settings_network_restore_default_caching_service_description">Are you sure you want to restore default caching service?</string>
+    <string name="settings_network_restore_default_caching_service_text_button">Restore Default Caching Service</string>
     <string name="settings_network_dialog_confirm">Confirm</string>
     <string name="settings_network_dialog_dismiss">Dismiss</string>
     <string name="settings_network_add_relay_error">Unable to add relay. Please try again in few moments.</string>
