--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -614,6 +614,7 @@
     <string name="accessibility_profile_send_zap">Send zap</string>
     <string name="accessibility_profile_qr_code">Show QR code</string>
     <string name="accessibility_note_drop_down">Note drop-down</string>
+    <string name="accessibility_article_drop_down">Article drop-down</string>
     <string name="accessibility_profile_drop_down">Profile drop-down</string>
     <string name="accessibility_media_drop_down">Media drop-down</string>
     <string name="accessibility_feed_picker">Feed picker</string>
@@ -639,4 +640,25 @@
     <string name="accessibility_copy_content">Copy content</string>
     <string name="accessibility_warning">Warning</string>
     <string name="accessibility_feed_reorder_drag_handle">Drag feed to change order</string>
+
+    <string name="article_feed_no_content">Articles will show up here.</string>
+    <string name="article_feed_reading_time">%1$s min read</string>
+    <plurals name="article_feed_comments_count">
+        <item quantity="one">%1$s comment</item>
+        <item quantity="other">%1$s comments</item>
+    </plurals>
+
+    <string name="article_feed_context_share_article">Share article</string>
+    <string name="article_feed_context_copy_article_link">Copy article link</string>
+    <string name="article_feed_context_add_to_bookmark">Add to Bookmarks</string>
+    <string name="article_feed_context_bookmark_added">Article added to your bookmarks.</string>
+    <string name="article_feed_context_remove_from_bookmark">Remove from Bookmarks</string>
+    <string name="article_feed_context_bookmark_removed">Article removed from your bookmarks.</string>
+    <string name="article_feed_context_copy_article_text">Copy article text</string>
+    <string name="article_feed_context_copy_article_id">Copy article ID</string>
+    <string name="article_feed_context_copy_raw_data">Copy raw data</string>
+    <string name="article_feed_context_copy_user_id">Copy user id</string>
+    <string name="article_feed_context_report_user">Report user</string>
+    <string name="article_feed_context_mute_user">Mute user</string>
+    <string name="article_feed_context_copied_toast">Copied!</string>
 </resources>
