Implement rendering article comments in ArticleDetailsScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -663,4 +663,6 @@
     <string name="article_feed_context_copied_toast">Copied!</string>
 
     <string name="article_details_zap">Zap</string>
+    <string name="article_details_comments_section_title">Comments</string>
+    <string name="article_details_post_comment_button">Post comment</string>
 </resources>
