--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,7 +148,15 @@
         <item quantity="other">in %1$s years</item>
     </plurals>
 
-    <string name="feed_list_title">My Nostr Feeds</string>
+    <string name="home_feeds_title">Home Feeds</string>
+    <string name="reads_feeds_title">Reads Feeds</string>
+    <string name="feed_marketplace_title">Feed Marketplace</string>
+    <string name="feed_marketplace_free_feed_label">Free</string>
+    <string name="feed_marketplace_paid_feed_label">Paid</string>
+    <string name="feed_details_title">Feed Details</string>
+    <string name="feed_details_add_feed">Add feed</string>
+    <string name="feed_details_remove_feed">Remove feed</string>
+
     <string name="feed_no_content">There is no content in this feed.</string>
     <string name="feed_error_loading">Unable to load content for this feed. Please try again.</string>
     <string name="feed_refresh_button">Refresh</string>
