--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,6 +233,43 @@
 
     <string name="search_followers_text">Followers</string>
 
+    <string name="asearch_top_app_bar_title">Advanced Search</string>
+    <string name="asearch_time_posted_anytime">Anytime</string>
+    <string name="asearch_time_posted_today">Today</string>
+    <string name="asearch_time_posted_week">This Week</string>
+    <string name="asearch_time_posted_month">This Month</string>
+    <string name="asearch_time_posted_year">This Year</string>
+    <string name="asearch_time_posted_custom">Custom</string>
+    <string name="asearch_search_kind_notes">Notes</string>
+    <string name="asearch_search_kind_reads">Reads</string>
+    <string name="asearch_search_kind_images">Images</string>
+    <string name="asearch_search_kind_videos">Videos</string>
+    <string name="asearch_search_kind_sound">Sound</string>
+    <string name="asearch_search_scope_global">Global</string>
+    <string name="asearch_search_scope_my_follows">My Follows</string>
+    <string name="asearch_search_scope_my_network">My Network</string>
+    <string name="asearch_search_scope_my_follows_interactions">My Follows Interactions</string>
+    <string name="asearch_search_order_by_time">Time</string>
+    <string name="asearch_search_order_by_content_score">Content Score</string>
+    <string name="asearch_multiselect_apply">Apply</string>
+    <string name="asearch_multiselect_anyone">Anyone</string>
+    <string name="asearch_search_button">Search</string>
+    <string name="asearch_included_words_placeholder">Include these words…</string>
+    <string name="asearch_excluded_words_placeholder">Exclude these words…</string>
+    <string name="asearch_search_kind_label">Search</string>
+    <string name="asearch_posted_by_label">Posted By</string>
+    <string name="asearch_posted_by_placeholder">Posted by…</string>
+    <string name="asearch_replying_to_label">Replying To</string>
+    <string name="asearch_replying_to_placeholder">Replying to…</string>
+    <string name="asearch_zapped_by_label">Zapped By</string>
+    <string name="asearch_zapped_by_placeholder">Zapped by…</string>
+    <string name="asearch_time_posted_label">Time Posted</string>
+    <string name="asearch_custom_time_posted_label">Custom Time Posted</string>
+    <string name="asearch_custom_time_posted_confirm">Confirm</string>
+    <string name="asearch_custom_time_posted_cancel">Cancel</string>
+    <string name="asearch_scope_label">Scope</string>
+    <string name="asearch_order_by_label">Order By</string>
+
     <string name="wallet_title">Wallet</string>
 
     <string name="notifications_title">Notifications</string>
