--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,8 +194,8 @@
     <string name="feed_lightning_invoice_expires_in">Expires: %1$s</string>
     <string name="feed_lightning_invoice_expired">This invoice has expired</string>
 
-    <string name="post_repost_button_confirmation">Repost Note</string>
-    <string name="post_quote_button_confirmation">Quote Note</string>
+    <string name="post_repost_button_confirmation">Repost</string>
+    <string name="post_quote_button_confirmation">Quote</string>
 
     <string name="note_editor_post_publish_button">Post</string>
     <string name="note_editor_reply_publish_button">Reply</string>
