Store all profile stats provided by backend and display reads and media count

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -455,6 +455,8 @@
 
     <string name="profile_following_stat">following</string>
     <string name="profile_followers_stat">followers</string>
+    <string name="profile_reads_stat">reads</string>
+    <string name="profile_media_stat">media</string>
     <string name="profile_notes_stat">notes</string>
     <string name="profile_replies_stat">replies</string>
     <string name="profile_follow_button">Follow</string>
