Revamp profile details header (#170)
* Implement follow indicators
* Store all profile stats provided by backend and display reads and media count
* Extend AvatarThumbnailsRow to allow for further customization
* Add new api endpoint to fetch profiles followed by users list
* Implement and display profile followed by indicator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -455,6 +455,8 @@
 
     <string name="profile_following_stat">following</string>
     <string name="profile_followers_stat">followers</string>
+    <string name="profile_reads_stat">reads</string>
+    <string name="profile_media_stat">media</string>
     <string name="profile_notes_stat">notes</string>
     <string name="profile_replies_stat">replies</string>
     <string name="profile_follow_button">Follow</string>
@@ -471,6 +473,7 @@
     <string name="profile_user_feed_title">%1$s\'s feed</string>
     <string name="profile_user_is_muted">%1$s is muted.</string>
     <string name="profile_follows_you">Follows you</string>
+    <string name="profile_followed_by">Followed by</string>
 
     <string name="profile_follow">Follow</string>
     <string name="profile_unfollow">Unfollow</string>
