Implement top zaps in feeds and new note wide layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -698,6 +698,7 @@
     <string name="accessibility_zaps_count">Zaps count</string>
     <string name="accessibility_likes_count">Likes count</string>
     <string name="accessibility_repost_count">Repost count</string>
+    <string name="accessibility_bookmark">Bookmark</string>
     <string name="accessibility_close">Close</string>
     <string name="accessibility_info">Info</string>
     <string name="accessibility_import_photo_from_gallery">Import photo from gallery</string>
