--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -218,6 +218,10 @@
     <string name="thread_publish_button">Reply</string>
     <string name="thread_publishing_button">Replying…</string>
     <string name="thread_reply_nostr_publish_error">Unable to publish your note to Nostr. Please try again soon.</string>
+    <string name="thread_stats_replies">Replies</string>
+    <string name="thread_stats_zaps">Zaps</string>
+    <string name="thread_stats_likes">Likes</string>
+    <string name="thread_stats_reposts">Reposts</string>
 
     <string name="long_form_thread_invalid_naddr">Unable to load content. The address is invalid.</string>
     
