--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,7 @@
     <string name="feed_marketplace_title">Feed Marketplace</string>
     <string name="feed_marketplace_free_feed_label">Free</string>
     <string name="feed_marketplace_paid_feed_label">Paid</string>
+    <string name="feed_marketplace_sub_feed_label">Sub</string>
     <string name="feed_details_title">Feed Details</string>
     <string name="feed_details_add_feed">Add Feed</string>
     <string name="feed_details_remove_feed">Remove Feed</string>
