Implement explore feeds tab (#186)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,7 @@
     <string name="feed_marketplace_title">Feed Marketplace</string>
     <string name="feed_marketplace_free_feed_label">Free</string>
     <string name="feed_marketplace_paid_feed_label">Paid</string>
+    <string name="feed_marketplace_sub_feed_label">Sub</string>
     <string name="feed_details_title">Feed Details</string>
     <string name="feed_details_add_feed">Add Feed</string>
     <string name="feed_details_remove_feed">Remove Feed</string>
@@ -241,6 +242,8 @@
     <string name="explore_zaps_tab">Zaps</string>
     <string name="explore_media_tab">Media</string>
     <string name="explore_topics_tab">Topics</string>
+    <string name="explore_feeds_dvm_details_action_button_add">Add to home feeds</string>
+    <string name="explore_feeds_dvm_details_action_button_remove">Remove from home feeds</string>
 
     <string name="search_followers_text">Followers</string>
 
