--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,6 +240,8 @@
     <string name="explore_trending_topics_no_content">Trending topics will appear here.</string>
     <string name="explore_feed_search_results">Search Results</string>
     <string name="explore_feed_fallback_title">Feed</string>
+    <string name="explore_feed_save_feed">Save</string>
+    <string name="explore_feed_remove_feed">Remove</string>
     <string name="explore_feeds_tab">Feeds</string>
     <string name="explore_people_tab">People</string>
     <string name="explore_zaps_tab">Zaps</string>
