--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -250,6 +250,7 @@
     <string name="explore_feeds_dvm_details_action_button_add">Add to home feeds</string>
     <string name="explore_feeds_dvm_details_action_button_remove">Remove from home feeds</string>
     <string name="explore_trending_people_no_content">Unable to load trending people. Please try again.</string>
+    <string name="explore_trending_zaps_no_content">Unable to load trending zaps. Please try again.</string>
     <string name="explore_feeds_no_content">Unable to load feeds. Please try again.</string>
 
     <string name="search_followers_text">Followers</string>
