--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -250,7 +250,8 @@
     <string name="explore_trending_zaps_no_content">Unable to load trending zaps. Please try again.</string>
     <string name="explore_feeds_no_content">Unable to load feeds. Please try again.</string>
 
-    <string name="bookmarks_title">Bookmarks</string>
+    <string name="bookmarks_title_notes">Note Bookmarks</string>
+    <string name="bookmarks_title_reads">Reads Bookmarks</string>
     <string name="bookmarks_bottom_sheet_notes">Notes</string>
     <string name="bookmarks_bottom_sheet_reads">Reads</string>
     <string name="bookmarks_no_content">Your bookmarks will appear here.</string>
