--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -505,6 +505,8 @@
     <string name="profile_user_is_muted">%1$s is muted.</string>
     <string name="profile_follows_you">Follows you</string>
     <string name="profile_followed_by">Followed by</string>
+    <string name="profile_save_user_feed_title">%1$s\'s Latest</string>
+    <string name="profile_save_user_feed_description">Latest notes by %1$s\'s follows</string>
 
     <string name="profile_follow">Follow</string>
     <string name="profile_unfollow">Unfollow</string>
